--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 amqp==5.1.1
 asgiref==3.6.0
-backports.zoneinfo==0.2.1
 billiard==3.6.4.0
 celery==5.2.7
 certifi==2023.5.7
@@ -13,6 +12,7 @@ Django==4.1.4
 django-crispy-forms==1.14.0
 djangorestframework==3.14.0
 djangorestframework-api-key==2.3.0
+gunicorn==20.1.0
 idna==3.4
 kombu==5.2.4
 numpy==1.24.3
@@ -21,13 +21,14 @@ Pillow==9.3.0
 prompt-toolkit==3.0.38
 psycopg==3.1.7
 psycopg-binary==3.1.6
+psycopg2==2.9.6
 psycopg2-binary==2.9.5
 python-dateutil==2.8.2
 pytz==2022.7.1
 requests==2.31.0
 six==1.16.0
 sqlparse==0.4.3
-typing-extensions==4.4.0
+typing_extensions==4.4.0
 tzdata==2023.3
 urllib3==2.0.2
 vine==5.0.0
